@@ -249,10 +249,9 @@ void synthv1widget_env::dragNode ( const QPoint& pos )
 			x = int(release() * float(w4));
 			setRelease(float(x + dx) / float(w4));
 			break;
-		default:
-			break;
 		}
-		m_posDrag = pos;
+		m_posDrag = m_poly.at(m_iDragNode);
+	//	m_posDrag = pos;
 	}
 }
 
@@ -303,9 +302,8 @@ void synthv1widget_env::mouseReleaseEvent ( QMouseEvent *pMouseEvent )
 {
 	QFrame::mouseReleaseEvent(pMouseEvent);
 
-	dragNode(pMouseEvent->pos());
-
 	if (m_iDragNode >= 0) {
+		dragNode(pMouseEvent->pos());
 		m_iDragNode = -1;
 		unsetCursor();
 	}
